--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,12 @@ language: cpp
 compiler:
   - gcc
 before_install:
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get update -qq
+install:
   - sudo pip install cpp-coveralls
-  - sudo apt-get install -y uuid-dev libzmq3-dev cmake ruby-ronn
+  - sudo apt-get install -y uuid-dev libzmq3-dev cmake ruby-ronn gcc-4.8 g++-4.8
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
 before_script:
   - mkdir build
   - cd build
