--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ compiler:
   - gcc
 before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo sh -c 'echo "deb http://packages.osrfoundation.org/gazebo/ubuntu precise main" > /etc/apt/sources.list.d/gazebo.list'
+  - wget http://packages.osrfoundation.org/gazebo.key -O - | sudo apt-key add -
   - sudo apt-get update -qq
 install:
   - sudo pip install cpp-coveralls
