--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,6 @@ before_script:
   - cmake .. -DCMAKE_BUILD_TYPE=Profile
 script:
   - make
+  - make test
 after_success:
   - coveralls --exclude lib --exclude tests --gcov-options '\-lp'
