--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,5 @@ script:
   - make
   - make test ARGS="-VV"
 after_script:
-    - coveralls --exclude-pattern '.*CMake[^/]+\.c(?:pp)?' --exclude test
+    #    - coveralls --exclude-pattern '.*CMake[^/]+\.c(?:pp)?' --exclude test
+         - coveralls --include src/ --include include/--exclude test/ --exclude tools/
